[gd_scene load_steps=4 format=3 uid="uid://80db8ew3ygkq"]

[ext_resource type="Script" path="res://levels/menu.gd" id="1_1ukr5"]
[ext_resource type="Texture2D" uid="uid://bja0wl8tcw71c" path="res://art/backgrounds/background_01.png" id="2_uc14d"]

[sub_resource type="LabelSettings" id="LabelSettings_eyho7"]
font_size = 50
font_color = Color(0, 0, 0, 1)
outline_size = 10

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ukr5")

[node name="MenuBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uc14d")
expand_mode = 2
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 720.0
offset_bottom = 60.0

[node name="Hostbutton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="Joinbutton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="startbutton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="Add IP" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
text = "Add IP"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Just wait this could take a while..."
label_settings = SubResource("LabelSettings_eyho7")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/Hostbutton" to="." method="_on_hostbutton_pressed"]
[connection signal="pressed" from="HBoxContainer/Joinbutton" to="." method="_on_joinbutton_pressed"]
[connection signal="pressed" from="HBoxContainer/startbutton" to="." method="_on_startbutton_pressed"]
